# aws-pricer

./: Cargo.toml  justfile
src/: credentials.rs  gql.rs  main.rs  params.rs  pricing.rs  state.rs  types.rs
src/assets/: index.html
src/gql/: loader.rs
