[package]
name = "aws-pricer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0"
async-graphql-axum = "6.0"
aws-credential-types = "0.56"
aws-types = "0.56"
aws-config = "0.56"
aws-sdk-pricing = "0.29"
axum = { version = "0.6", features = ["headers", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.22"
shuttle-runtime = "0.22"
shuttle-secrets = "0.22"
tokio = "1.28"
tokio-stream = "0.1"
