[package]
name = "aws-pricer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "6.0", features = ["dataloader"] }
async-graphql-axum = "6.0"
async-trait = "0.1"
aws-credential-types = "0.56"
aws-types = "0.56"
aws-config = "0.56"
aws-sdk-pricing = "0.30"
axum = { version = "0.6", features = ["headers", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.25"
shuttle-runtime = "0.25"
shuttle-secrets = "0.25"
tokio = "1.28"
tokio-stream = "0.1"
